--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -13,7 +13,10 @@
         <div class="right-section">
           <button class="header-button">About Me</button>
           <button class="header-button">Work Experience</button>
-          <button class="header-button">Projects</button>
+          <a class="projects-link" href="projects.html">
+            <button class="header-button">Projects</button>
+          </a>
+          
         </div>
       </nav>
 
