Added 'new' to the title

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Brendon Wolfe's Portfolio</title>
+        <title>Brendon Wolfe's Portfolio New</title>
         <link rel="stylesheet" href="portfolio.css">
     </head>
     <body>
