began separating my header to have it on multiple pages

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="portfolio.css">
     </head>
     <body>
+      <link rel="" href="header.html">
       <nav>
         <div class="left-section">
           <p class="email"><u>wolfebrendon@gmail.com</u></p>
