--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="portfolio.css">
     </head>
     <body>
-      <link rel="" href="header.html">
+      <link rel="" href="header.html"> <!--link the header here from the new file-->
+
+
       <nav>
         <div class="left-section">
           <p class="email"><u>wolfebrendon@gmail.com</u></p>
@@ -20,6 +22,7 @@
           
         </div>
       </nav>
+
 
       <h2 class="name">Brendon M. Wolfe</h2>
 
