--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -14,12 +14,18 @@
           <p class="phone">(810) 734-1262</p>
         </div>
         <div class="right-section">
-          <button class="header-button">About Me</button>
-          <button class="header-button">Work Experience</button>
+          <a class="" href="portfolio.html">
+            <button class="header-button">Home</button>
+          </a>
+          <a class="" href="about-me.html">
+            <button class="header-button">About Me</button>
+          </a>
+          <a class="" href="work-experience.html">
+            <button class="header-button">Work Experience</button>
+          </a>
           <a class="projects-link" href="projects.html">
             <button class="header-button">Projects</button>
           </a>
-          
         </div>
       </nav>
 
@@ -31,6 +37,7 @@
           <h3 class="info-text">
             <br>LinkedIn: https://www.linkedin.com/in/brendonwolfe21
             <br>GitHub: https://github.com/bmwolfe
+            <button><img class="github-button" src="images/github_logo.png"></image></button>
           </h3>
         </div>
         <div class="photo-outline">
