Added elements to the portfolio and nearly finished the home page.

--- a/portfolio/about-me.html
+++ b/portfolio/about-me.html
@@ -15,7 +15,7 @@
           <button class="header-button">Home</button>
         </a>
         <a class="" href="about-me.html">
-          <button class="header-button">About Me</button>
+          <button class="header-button">Skills</button>
         </a>
         <a class="" href="work-experience.html">
           <button class="header-button">Work Experience</button>
@@ -25,5 +25,15 @@
         </a>
       </div>
     </nav>
+
+    <div class="about">
+      <h4>Computer Language Skills</h4>
+      <p>
+        <u class="">Programming Languages:</u> C, C++, CSS, HTML, Java, JavaScript, Python, Swift
+        <br><u>Software Applications:</u> Eclipse IDE, NetBeans IDE, VSCode, Scene Builder, Google Colab, JupyterLab, DaVinci Resolve Video Editor, Microsoft Office Applications
+        <br><u>Other:</u> Algorithms, Classes, Data Structures, Functions, JavaFX, Objects, Parallel Programming
+      </p>
+    </div>
+
   </body>
 </html>
