--- a/portfolio/work-experience.html
+++ b/portfolio/work-experience.html
@@ -15,7 +15,7 @@
           <button class="header-button">Home</button>
         </a>
         <a class="" href="about-me.html">
-          <button class="header-button">About Me</button>
+          <button class="header-button">Skills</button>
         </a>
         <a class="" href="work-experience.html">
           <button class="header-button">Work Experience</button>
@@ -25,5 +25,9 @@
         </a>
       </div>
     </nav>
+    <div class="work">
+      <h4>Work</h4>
+
+    </div>
   </body>
 </html>
