--- a/portfolio/header.html
+++ b/portfolio/header.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link rel="stylesheet" href="portfolio.css">
   </head>
   <body>
+
+
+    <!--Use React to mak this possible-->
+
+
     <nav>
       <div class="left-section">
         <p class="email"><u>wolfebrendon@gmail.com</u></p>
         <p class="phone">(810) 734-1262</p>
-        </div>
-        <div class="right-section">
-        <button class="header-button">About Me</button>
-        <button class="header-button">Work Experience</button>
+      </div>
+      <div class="right-section">
+        <a class="" href="portfolio.html">
+          <button class="header-button">Home</button>
+        </a>
+        <a class="" href="about-me.html">
+          <button class="header-button">Skills</button>
+        </a>
+        <a class="" href="work-experience.html">
+          <button class="header-button">Work Experience</button>
+        </a>
         <a class="projects-link" href="projects.html">
-            <button class="header-button">Projects</button>
+          <button class="header-button">Projects</button>
         </a>
       </div>
     </nav>
