--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -15,7 +15,7 @@
           <button class="header-button">Home</button>
         </a>
         <a class="" href="about-me.html">
-          <button class="header-button">About Me</button>
+          <button class="header-button">Skills</button>
         </a>
         <a class="" href="work-experience.html">
           <button class="header-button">Work Experience</button>
