--- a/javascript-amazon-project-main/checkout.html
+++ b/javascript-amazon-project-main/checkout.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="checkout-header-middle-section">
-          Checkout (<a class="return-to-home-link checkout-item-count"
+          Checkout (<a class="return-to-home-link js-checkout-item-count"
             href="amazon.html">3 items</a>)
         </div>
 
