--- a/portfolio/about-me.html
+++ b/portfolio/about-me.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="portfolio.css">
   </head>
   <body>
-    <nav>
+    <nav> <!-- * This is my header section -->
       <div class="left-section">
         <p class="email"><u>wolfebrendon@gmail.com</u></p>
         <p class="phone">(810) 734-1262</p>
@@ -15,18 +15,40 @@
           <button class="header-button">Home</button>
         </a>
         <a class="" href="about-me.html">
-          <button class="header-button">Skills</button>
+          <button class="header-button">About</button>
         </a>
-        <a class="" href="work-experience.html">
-          <button class="header-button">Work Experience</button>
-        </a>
-        <a class="projects-link" href="projects.html">
-          <button class="header-button">Projects</button>
+        <a class="projects-link" href="devPosts.html">
+          <button class="header-button">Dev Posts</button>
         </a>
       </div>
     </nav>
 
-    <div class="about">
+    <div class="container">
+      <div class="about">
+        <h4>Education:</h4>
+        <p>I graduated top of my class from Algonac High School in 2021,
+          acquiring my IB Diploma through the IB Diploma Programme.<br><br>
+          Currently, I am studying computer science at Oakland University,
+          I have an interest in web, app as well as game development.
+          I am specializing my degree in Cybersecurity.<br><br>
+        </p>
+      </div>
+      <img class="algonac" src="images/Algonac.jpg">
+    </div>
+
+    <div class="about-section">
+      <h4>Work Experience:</h4>
+      <p>
+        <u>ABC Home and Commercial Services, Clay Twp, MI:</u> <br>
+        Certified Pesticide Applicator: <br>
+        Properly treated the outside and the inside of homes and commercial buildings such as restaurants.
+        Managed to get up to speed with the senior technicians within two weeks becoming a preferred technician to work with.
+        Offered to work many Saturdays due to being able to keep up with the senior technicians.
+        Reorganized and maintained organization of our chem-room.
+      </p>
+    </div>
+
+    <div class="about-section">
       <h4>Computer Language Skills</h4>
       <p>
         <u class="">Programming Languages:</u> C, C++, CSS, HTML, Java, JavaScript, Python, Swift
@@ -34,6 +56,54 @@
         <br><u>Other:</u> Algorithms, Classes, Data Structures, Functions, JavaFX, Objects, Parallel Programming
       </p>
     </div>
+
+    <div class="about-section">
+      <h4>Activities and Achievements:</h4>
+      <p>
+        - President’s List Fall 2021 - Present<br>
+        - Member of Society of Women’s Engineers Spring 2022 - Present<br>
+       -  Member of the National Society of Leadership and Success (NSLS) Spring 2023 - Present<br>
+        - Recipient of the SECS Academic Promise Scholarship for 
+        academic excellence in High School, participating in Engineering and <br>
+        Computer Science clubs/events at Oakland University, maintaining a 2.5+ GPA 
+        and needing financial assistance<br>
+        - Recipient of the SECS Alumni/Yatooma Scholarship for academic excellence 
+        in the fields of Engineering and Computer Science<br>
+        - Recipient of the MI Competitive Scholarship for academic excellence<br>
+        - Recipient of the OU Talented Scholar by receiving a between 1200-1300 
+        on the SAT and maintaining a 3.0+ GPA<br>
+        - Recipient of the OU Golden Grant Renewal by maintaining a 2.0+ GPA<br>
+        - Recipient of the OU Housing Grant Renewal by maintaining a 2.5+ GPA<br>
+        - Recipient of the OU Geographic Region Award by maintaining a 3.0+ GPA<br>
+        - Won 2nd place in the Grizzhacks Hackathon for 2023<br><br>
+
+      </p>
+    </div>
+
+    <footer class="footer">
+      <div class="footerTop">
+       <ul>
+         <li class="contact-info">
+           <p class="contactInfo">Contact: <a href="mailto:wolfebrendon@gmail.com" class="contactInfo emailLink">wolfebrendon@gmail.com</a></p>
+         </li>
+         <li>
+           <p class="contactInfo">Phone: (810) 734-1262</p>
+         </li>
+   
+         <!-- TODO add resume to the project-->
+   
+         <li class="resume-button">
+           <p><a href="your-resume.pdf" class="" download>Download Resume</a></p>
+         </li>
+         <li class="back-to-top">
+           <p><a href="#top">Back to Top</a></p>
+         </li>
+       </ul>
+      </div>
+      <div class="footerBottom">
+         <p class="copyright">&copy; 2024 <script>new Date().getFullYear()>2024&&document.write("-"+new Date().getFullYear());</script> Brendon M. Wolfe. All Rights Reserved</p>
+       </div>
+     </footer>
 
   </body>
 </html>
