--- a/portfolio/about-me.html
+++ b/portfolio/about-me.html
@@ -3,6 +3,7 @@
   <head>
     <title>Brendon Wolfe's Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Fira+Code:wght@400&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav> <!-- * This is my header section -->
@@ -23,7 +24,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="containerTop">
       <div class="about">
         <h4>Education:</h4>
         <p>I graduated top of my class from Algonac High School in 2021,
@@ -36,45 +37,40 @@
       <img class="algonac" src="images/Algonac.jpg">
     </div>
 
-    <div class="about-section">
+    <div class="about">
       <h4>Work Experience:</h4>
       <p>
-        <u>ABC Home and Commercial Services, Clay Twp, MI:</u> <br>
-        Certified Pesticide Applicator: <br>
-        Properly treated the outside and the inside of homes and commercial buildings such as restaurants.
-        Managed to get up to speed with the senior technicians within two weeks becoming a preferred technician to work with.
-        Offered to work many Saturdays due to being able to keep up with the senior technicians.
-        Reorganized and maintained organization of our chem-room.
+        <b>* ABC Home and Commercial Services, Clay Twp, MI:</b> <br>
+        <u>Certified Pesticide Applicator</u>: <br>
+        -Properly treated the outside and the inside of homes and commercial buildings such as restaurants.<br>
+        -Managed to get up to speed with the senior technicians within two weeks becoming a preferred technician to work with.<br>
+        -Offered to work many Saturdays due to being able to keep up with the senior technicians.<br>
+        -Reorganized and maintained organization of our chem-room.
       </p>
     </div>
 
-    <div class="about-section">
-      <h4>Computer Language Skills</h4>
+    <div class="about">
+      <h4>Technical Skills</h4>
       <p>
-        <u class="">Programming Languages:</u> C, C++, CSS, HTML, Java, JavaScript, Python, Swift
-        <br><u>Software Applications:</u> Eclipse IDE, NetBeans IDE, VSCode, Scene Builder, Google Colab, JupyterLab, DaVinci Resolve Video Editor, Microsoft Office Applications
-        <br><u>Other:</u> Algorithms, Classes, Data Structures, Functions, JavaFX, Objects, Parallel Programming
+        <u class="">Programming Languages</u>: C, C++, CSS, HTML, Java, JavaScript, Python, Swift
+        <br><u>Software Applications</u>: Eclipse IDE, NetBeans IDE, VSCode, Scene Builder, Google Colab, JupyterLab, DaVinci Resolve Video Editor, Microsoft Office Applications
+        <br><u>Other</u>: Algorithms, Classes, Data Structures, Functions, JavaFX, Objects, Parallel Programming
       </p>
     </div>
 
-    <div class="about-section">
+    <div class="about">
       <h4>Activities and Achievements:</h4>
       <p>
         - President’s List Fall 2021 - Present<br>
         - Member of Society of Women’s Engineers Spring 2022 - Present<br>
        -  Member of the National Society of Leadership and Success (NSLS) Spring 2023 - Present<br>
-        - Recipient of the SECS Academic Promise Scholarship for 
-        academic excellence in High School, participating in Engineering and <br>
-        Computer Science clubs/events at Oakland University, maintaining a 2.5+ GPA 
-        and needing financial assistance<br>
-        - Recipient of the SECS Alumni/Yatooma Scholarship for academic excellence 
-        in the fields of Engineering and Computer Science<br>
-        - Recipient of the MI Competitive Scholarship for academic excellence<br>
-        - Recipient of the OU Talented Scholar by receiving a between 1200-1300 
-        on the SAT and maintaining a 3.0+ GPA<br>
-        - Recipient of the OU Golden Grant Renewal by maintaining a 2.0+ GPA<br>
-        - Recipient of the OU Housing Grant Renewal by maintaining a 2.5+ GPA<br>
-        - Recipient of the OU Geographic Region Award by maintaining a 3.0+ GPA<br>
+        - Recipient of the SECS Academic Promise Scholarship (100% tuition + housing)<br>
+        - Recipient of the SECS Alumni/Yatooma Scholarship <br>
+        - Recipient of the MI Competitive Scholarship<br>
+        - Recipient of the OU Talented Scholar<br>
+        - Recipient of the OU Golden Grant Renewal<br>
+        - Recipient of the OU Housing Grant Renewal<br>
+        - Recipient of the OU Geographic Region Award<br>
         - Won 2nd place in the Grizzhacks Hackathon for 2023<br><br>
 
       </p>
@@ -83,18 +79,18 @@
     <footer class="footer">
       <div class="footerTop">
        <ul>
+         <!-- * This lets visitors email me directly * -->
          <li class="contact-info">
            <p class="contactInfo">Contact: <a href="mailto:wolfebrendon@gmail.com" class="contactInfo emailLink">wolfebrendon@gmail.com</a></p>
          </li>
          <li>
            <p class="contactInfo">Phone: (810) 734-1262</p>
          </li>
-   
-         <!-- TODO add resume to the project-->
-   
+         <!-- * This lets visitors download my resume * -->
          <li class="resume-button">
-           <p><a href="your-resume.pdf" class="" download>Download Resume</a></p>
+           <p><a href="files/Resume2024.docx" class="" download>Download Resume</a></p>
          </li>
+         <!-- * This lets visitors return to the top of the page * -->
          <li class="back-to-top">
            <p><a href="#top">Back to Top</a></p>
          </li>
