--- a/portfolio/devPosts.html
+++ b/portfolio/devPosts.html
@@ -3,6 +3,7 @@
   <head>
     <title>Brendon Wolfe's Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Fira+Code:wght@400&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav> <!-- * This is my header section -->
@@ -23,23 +24,27 @@
       </div>
     </nav>
 
-    <ul js-postList></ul>
+    <p class="devPostInfo">If you are interested in project updates 
+      and project plans I will share major developments 
+      here, either through text description or video description.</p>
+
+    <ul class="js-postList"></ul>
 
     <footer class="footer">
       <div class="footerTop">
        <ul>
+         <!-- * This lets visitors email me directly * -->
          <li class="contact-info">
            <p class="contactInfo">Contact: <a href="mailto:wolfebrendon@gmail.com" class="contactInfo emailLink">wolfebrendon@gmail.com</a></p>
          </li>
          <li>
            <p class="contactInfo">Phone: (810) 734-1262</p>
          </li>
-   
-         <!-- TODO add resume to the project-->
-   
+         <!-- * This lets visitors download my resume * -->
          <li class="resume-button">
-           <p><a href="your-resume.pdf" class="" download>Download Resume</a></p>
+           <p><a href="files/Resume2024.docx" class="" download>Download Resume</a></p>
          </li>
+         <!-- * This lets visitors return to the top of the page * -->
          <li class="back-to-top">
            <p><a href="#top">Back to Top</a></p>
          </li>
@@ -49,5 +54,7 @@
          <p class="copyright">&copy; 2024 <script>new Date().getFullYear()>2024&&document.write("-"+new Date().getFullYear());</script> Brendon M. Wolfe. All Rights Reserved</p>
        </div>
      </footer>
+
+     <script type="module" src="scripts/postList.js"></script>
   </body>
 </html>
